Fix: align text in filter buttons on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -111,8 +111,6 @@ body {
 
 .filter__btn {
   list-style: none;
-  color: var(--dark-text);
-  font-size: 2.4rem;
 
   &:not(:last-child) {
     margin-right: 1rem;
@@ -130,13 +128,14 @@ body {
 
   a:link,
   a:visited {
-    display: inline-block;
-    border-radius: 1.6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 12rem;
-    background-color: transparent;
+    font-size: 2.4rem;
+    border-radius: 1.6rem;
     cursor: pointer;
     text-decoration: none;
-    text-align: center;
     color: var(--dark-text);
     transition: all 0.3s;
 
